# ayeda

./: MarcosBarbuzanoSocorro-p1.tgz
p1/: CMakeLists.txt  Makefile  ant.cc  ant.h  biginteger.cc  biginteger.h  bigunsigned.cc  bigunsigned.h  main.cc  main_file.cc  simulator.cc  simulator.h  tape.cc  tape.h
p1/p1_mod/: ant.cc  ant.h  main.cc
p1/p1_norm/: Makefile  ant.cc  main.cc  simulator.cc  simulator.h  tape.h
p2/: Makefile  ant.cc  ant.h  entrada.txt  langton  main.cc  ruleant.cc  ruleant.h  simulator.cc  simulator.h  tape.cc  tape.h
p2/p2_mod/: ant.cc  simulator.cc  simulator.h  tape.cc  tape.h
p2/p2_norm/: Makefile  ant.h  entrada.txt  main.cc  tape.cc
p3/claude/: ant.h  carnivore_ant.cc  hervibore_ant.cc  norm  simulator.cc  svexception.cc  tape_periodic.cc  tape_periodic.h  tape_sliding.cc
p3/mod/: carnivore_ant.cc  carnivore_ant.h  herbivore_ant.cc  herbivore_ant.h  reproduccion.txt  simulator.cc  simulator.h  sliding_vector.h  tape.h  tape_periodic.cc  tape_periodic.h  tape_sliding.cc  tape_sliding.h
p3/norm/: Makefile  ant.cc  ant.h  carnivore_ant.h  caza_mortal.txt  ejemplo.txt  herbivore_ant.cc  herbivore_ant.h  main.cc  simulator.cc  simulator.h  svexception.h  tape.cc  tape.h  tape_reflective.cc  tape_reflective.h  tape_sliding.cc  tape_sliding.h
p3/p3_norm/: Makefile  main.cc  sliding_vector.h  tape.cc  tape_reflective.cc
p4/mod/: Makefile  dispersion_function.h  dynamic_sequence.h  hash_table.h  main.cc  nif.h  resultados.txt  sequence.h  static_sequence.h
p4/norm/: Makefile  dispersion_function.h  dynamic_sequence.h  hash_table.h  (+5 more)
(+30 files in other folders)
